[package]
name = "swandist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-std = "1.12.0"
async-trait = "0.1.81"
base64 = "0.21.6"
bitflags = "2.4.1"
byteorder = "1.5.0"
bytes = "1.6.1"
cfb-mode = "0.8.2"
cfb8 = "0.8.1"
clap = "4.5.9"
clap_derive = "4.5.8"
colorgrad = "0.6.2"
crc32fast = "1.3.2"
dotenv = "0.15.0"
flate2 = "1.0.28"
futures = "0.3.30"
hex = "0.4.3"
image = "0.25.2"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
num-bigint = "0.4.6"
once_cell = "1.19.0"
openssl = "0.10.66"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rsa-der = "0.3.0"
serde_derive = "1.0.204"
serde_json = "1.0.111"
sha1 = "0.10.6"
tokio-stream = "0.1.15"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
warp = "0.3.7"
zip = "0.6.6"

[dependencies.rsa]
version = "0.9.6"
features = ["getrandom", "pkcs5"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1.3"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.5"
features = ["json"]

[dependencies.rust-crypto]
version = "0.2.36"

[dependencies.cipher]
version = "0.5.0-pre.4"

[dependencies.aes]
version = "0.8.4"
